# qubo-solver

./: .gitignore  README.md  benchmark_eval.py  environment.yml  setup.py
benchmark_results/: adiabatic.csv  best.csv  bsb.csv  bsb_legacy.csv  digcim.csv  dsb.csv  fem.csv
benchmarks/: __init__.py
benchmarks/best_known/: __init__.py  gset_maxcut.py
benchmarks/instances/matrix/: bcsstk33.mtx
benchmarks/instances/maxcut/Gset_biased/: G13_biased  G18_biased  G19_biased  G20_biased  G21_biased  G34_biased  G39_biased  G40_biased  G41_biased  G42_biased  G47_biased  G51_biased  G53_biased  G54_biased  (+1 more)
benchmarks/instances/tsp/: best_known.txt
config/: fem.json  qis3.json  sbm.json
doc/: fem.md  qis3.md  sbm.md
qubo_solver/: __init__.py
qubo_solver/digcim/: digsim.py
qubo_solver/fem/: problem.py
qubo_solver/fem/customized_problem/: __init__.py  hyper_bmincut.py
qubo_solver/qis3/: qis3.py
qubo_solver/sbm/: utils.py
src/: __init__.py  solver.py
src/digcim/: __init__.py
src/example/: CMakeLists.txt  README.md
src/example/output/: n100_01.floorplan  n200_01.floorplan  n300_01.floorplan
src/example/script/: run_benchmark.py
src/example/src/: AlgebraicSolver.hh  BStarTree.cc  BStarTree.hh  BsbSolver.cc  BsbSolver.hh  CubicOptimizer.hh  ProblemBase.hh  SatSolver.cc  SatSolver.hh  define.hh  main.cc
src/example/util/: BsbSolverTest.cc  Sparse.hh  Timer.hh
src/fem/: __init__.py  interface.py  solver_fem.py  utils.py
src/qis3/: __init__.py
src/qubo_solver/: method_registry.py  solver_base.py
src/qubo_solver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/qubo_solver/digcim/: __init__.py
src/qubo_solver/fem/: __init__.py  solver_fem.py
src/qubo_solver/qis3/: utils.py
src/qubo_solver/sbm/: __init__.py  gsb.py
src/sbm/: __init__.py  _legacy.py  higher_order.py  problems.py
tests/: __init__.py  test_adaptive_annealing.py  test_benchmark_solvers.py  test_higher_order.py  test_problems.py  test_unified_solver.py
(+134 files in other folders)
